[package]
name = "call_input"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = "Try3D <leptonaray@gmail.com>"
repository = "https://github.com/Try3D/call_input"
readme = "README.md"
description = "Get user input in rust like that of cs50 header file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
